# Spikive-Manager

./: CMakeLists.txt  README.md  package.xml
config/: launch_config.yaml  launch_config_s10ultra.yaml
launch/: AstroManager.launch  AstroManagerS10Ultra.launch
msg/: AutoManager.msg  Command.msg
scripts/: node_manager.py
