<?xml version="1.0"?>
<package format="2">
  <name>astro_manager</name>
  <version>0.0.1</version>
  <description>The your_ros_package package</description>

  <maintainer email="qigengduan@cuhk.edu.hk">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 依赖项 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- runtime-only: subscribed to read /mavros/state.armed -->
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <!-- 其他设置 -->
  </export>
</package>
